--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 </div>
 
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+<script src="js/adapter/adapter-latest.js"></script>
 <script src="js/main.js"></script>
 
 <script src="js/ga.js"></script>
